# kyros-core

./: .gitignore  Cargo.toml  README.md  comp.glsl  png_test.sh
benches/: generation.rs
src/: cli.rs  color.rs  execution.rs  gpu.rs  gpu_thread_utils.rs  lib.rs  main.rs  math.rs  open_writer.rs  save.rs  shadows.rs  structs.rs  utils.rs  validator.rs
src/colors/: color.rs  mod.rs  profiles.rs  shadows.rs
src/math/: formula.rs  mod.rs  structs.rs
