[package]
name = "kyros"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "string"] }
# wasm-bindgen = "0.2.87"
hsv = "0.1.1"
image = "0.24.6"
time = "0.3.22"
base64 = "0.21.4"
csscolorparser = "0.6.2"
minijinja = "1.0.21"
vulkano = "0.34.1"
shaderc = "0.8.3"
log = "0.4.21"
bytemuck = "1.21.0"
ahash = "0.8.11"
vulkano-shaders = "0.34.0"

# [lib]
# crate-type=["cdylib"]
