[package]
name = "kyros"
version = "1.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "string"] }
hsv = "0.1.1"
image = "0.24.6"
time = "0.3.22"
base64 = "0.21.4"
csscolorparser = { version = "0.6.2", features = ["serde"] }
minijinja = "1.0.21"
vulkano = "0.34.1"
shaderc = "0.8.3"
log = "0.4.21"
bytemuck = "1.21.0"
ahash = "0.8.11"
vulkano-shaders = "0.34.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
bitflags = "2.6.0"
crc32fast = "1.4.2"
# png = "0.17.16"
png = { version = "0.17.16", path = "../image-png" }
tokio = { version = "1.42.0", features = ["full"] }
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
rayon = "1.10.0"
parking_lot = "0.12.3"
flate2 = { version="1.0.35", default-features=false, features = ["zlib-ng"] }

[dev-dependencies]
byteorder = "1.5.0"

# [lib]
# crate-type=["cdylib"]
