[package]
name = "kyros"
version = "1.1.1"
edition = "2021"

[lib]
name = "kyros"
path = "src/lib.rs"

[[bin]]
name = "kyros-cli"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive", "string"] }
hsv = "0.1.1"
image = "0.24.6"
time = "0.3.22"
base64 = "0.21.4"
csscolorparser = { version = "0.6.2", features = ["serde"] }
minijinja = "1.0.21"
vulkano = "0.34.1"
shaderc = "0.8.3"
log = "0.4.21"
bytemuck = "1.21.0"
ahash = "0.8.11"
vulkano-shaders = "0.34.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
png = { git = "https://github.com/image-rs/image-png.git", rev = "e0cb9196a21c041ade1f973fb159a14c232c33bf" }
tokio = { version = "1.42.0", features = ["full"] }
indicatif = "0.17.9"
indicatif-log-bridge = "0.2.3"
parking_lot = "0.12.3"
console = "0.15.10"
bitflags = "2.8.0"
gzp = { version = "0.11.3", features = ["deflate_zlib_ng"] }

[dev-dependencies]
byteorder = "1.5.0"
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "generation"
harness = false

# [lib]
# crate-type=["cdylib"]
